--- a/workshops/build-your-own-event-store/exercises/build.gradle
+++ b/workshops/build-your-own-event-store/exercises/build.gradle
@@ -30,9 +30,15 @@ dependencies {
   testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 }
 
+def isCi = project.hasProperty('ci') && project.property('ci') == 'true'
+
 tasks.named('test') {
-  useJUnitPlatform {
-    excludeTags 'Exercise'
+  doFirst {
+    useJUnitPlatform {
+      if (isCi) {
+        excludeTags 'Exercise'
+      }
+    }
   }
 }
 
