--- a/workshops/build-your-own-event-store/solved/build.gradle
+++ b/workshops/build-your-own-event-store/solved/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
   testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
   testImplementation 'org.testcontainers:mongodb:1.20.4'
+  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
 }
 
 tasks.named('test') {
