--- a/.github/workflows/samples_event-stream-metadata.yml
+++ b/.github/workflows/samples_event-stream-metadata.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Start containers
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
           distribution: "adopt"
@@ -43,10 +43,10 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -Pci=true
 
       - name: Archive test report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: Test report
@@ -54,4 +54,4 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker-compose down
+        run: docker compose down
