--- a/.github/workflows/workshops_build-your-own-event-store-solved.yml
+++ b/.github/workflows/workshops_build-your-own-event-store-solved.yml
@@ -43,7 +43,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -Pci=true
 
       - name: Archive test report
         uses: actions/upload-artifact@v4
