--- a/.github/workflows/workshops_event-driven-architecture-exercises.yml
+++ b/.github/workflows/workshops_event-driven-architecture-exercises.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       # define the test matrix
       matrix:
-        java-version: [22]
+        java-version: [21, 22]
 
     steps:
       - name: Check Out Repo
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test report
+          name: Test report - Java ${{ matrix.java-version }}
           path: ./workshops/event-driven-architecture/exercises/build/test-results/test
 
       - name: Stop containers
